--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -6,8 +6,10 @@ name: Java CI
 on:
   push:
     branches: [ "main" ]
+  pull_request_target:
+    types: [opened, reopened, converted_to_draft, ready_for_review, synchronize, edited, review_requested, closed]
   pull_request:
-    branches: [ "main" ]
+    types: [opened, synchronize, reopened, closed]
 
 jobs:
   build:
