--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -17,7 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout PR code
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
