use maven instead of ant

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 bin/
 build/
+target/
 meta/
 *.class
 *.jar
@@ -10,6 +11,34 @@ out/
 *.iml
 *.ipr
 *.iws
+
+
+.classpath
+.project
+.settings/
+
+.idea/
+*.iml
+*.iws
+
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+*.log
+*.tmp
+*.temp
+
+.DS_Store
+Thumbs.db
+
+/.mvn/wrapper/maven-wrapper.jar
+
+/generated-sources/
+
+/dependency/
 
 .vscode/
 .code-workspace
